@@ -217,6 +217,12 @@ gr:duplicate()
     individual foregrounds on duplicates.
 
 
+gr:shift_vertically(lines)
+    Shifts the graphic vertically.
+    A positive value for lines shifts it down.
+    A negative value for lines shifts it up.
+
+
 gr:export_ppm(filename)
     Exports the graphic as Portable Pixmap (PPM) file.
 
