@@ -1,3 +1,10 @@
+2011-09-27  Andreas K. Foerster  <info@akfoerster.de>
+
+	* lua/akfavatar-graphic.c (lgraphic_shift_vertically):
+	new function
+
+------------------------------------------------------------------------
+
 2011-09-13  Andreas K. Foerster  <info@akfoerster.de>
 
 	* version 0.21.2 released
